# mcp

./: .gitignore  demo.csv  main.py  mcp_calculator_service.py  mcp_file_service.py  pyproject.toml
